--- a/website/templates/races.html
+++ b/website/templates/races.html
@@ -48,7 +48,7 @@
 			</tr>
 			<template x-for="race, index in filterQuery()">
 				<tr>
-					<td><a @click="window.location.href = '/Character/Races/' + race.name" x-text="race.name"></a></td>
+					<td><a @click="window.location.href = '/Character/Race/' + race.name" x-text="race.name"></a></td>
 					<td x-text="race.asi"></td>
 					<td x-text="race.size"></td>
 				</tr>
