added feats functionality

--- a/website/templates/background.html
+++ b/website/templates/background.html
@@ -1,8 +1,8 @@
 {% extends "master.html" %}
 
 {% block head %}
-<title>Create Rule Category | Wayfinder</title>
-<script src="{{ url_for('static', filename='js/race.js') }}"></script>
+<title>Create Rule Category | Wayfinder {{ cruleset.name }}</title>
+<script src="{{ url_for('static', filename='js/background.js') }}"></script>
 {% endblock %}
 
 {% block body %}
