--- a/website/templates/backgrounds.html
+++ b/website/templates/backgrounds.html
@@ -2,7 +2,7 @@
 {% extends "master.html" %}
 
 {% block head %}
-<title>Under Construction | Luke Henderson</title>
+<title>Backgrounds | Wayfinder {{cruleset.name }}</title>
 <script src="{{ url_for('static', filename='js/backgrounds.js') }}"></script>
 {% endblock %}
 
