--- a/website/templates/create-category.html
+++ b/website/templates/create-category.html
@@ -1,7 +1,7 @@
 {% extends "master.html" %}
 
 {% block head %}
-<title>Create Rule Category | Wayfinder</title>
+<title>Create Rule Category | Wayfinder {{ cruleset.name }}</title>
 {% endblock %}
 
 {% block body %}
