--- a/website/templates/create-rule.html
+++ b/website/templates/create-rule.html
@@ -1,7 +1,7 @@
 {% extends "master.html" %}
 
 {% block head %}
-<title>Create Rule | Wayfinder</title>
+<title>Create Rule | Wayfinder {{cruleset.name }}</title>
 <script src="{{ url_for('static', filename='js/create-rule.js') }}"></script>
 {% endblock %}
 
