--- a/website/templates/create-skill.html
+++ b/website/templates/create-skill.html
@@ -1,7 +1,7 @@
 {% extends "master.html" %}
 
 {% block head %}
-<title>Create Skill | Wayfinder</title>
+<title>Create Skill | Wayfinder {{ cruleset.name }}</title>
 <script src="{{ url_for('static', filename='js/create-skill.js') }}"></script>
 {% endblock %}
 
