--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "master.html" %}
 
 {% block head %}
-<title>Wayfinder | 5e SRD Reference</title>
+<title>Wayfinder | {{ cruleset.name }} Reference</title>
 {% endblock %}
 
 {% block body %}
