--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "master.html" %}
 
 {% block head %}
-<title>Under Construction | Luke Henderson</title>
+<title>Log In | Wayfinder</title>
 {% endblock %}
 
 {% block body %}
