--- a/website/templates/manage-ruleset.html
+++ b/website/templates/manage-ruleset.html
@@ -1,7 +1,7 @@
 {% extends "master.html" %}
 
 {% block head %}
-<title>Create Ruleset | Wayfinder</title>
+<title>Manage Ruleset | Wayfinder</title>
 <script src="{{ url_for('static', filename='js/manage-rulesets.js') }}"></script>
 {% endblock %}
 
