--- a/website/templates/races.html
+++ b/website/templates/races.html
@@ -1,7 +1,7 @@
 {% extends "master.html" %}
 
 {% block head %}
-<title>Create Rule Category | Wayfinder</title>
+<title>Races | Wayfinder {{ cruleset.name }}</title>
 <script src="{{ url_for('static', filename='js/races.js') }}"></script>
 {% endblock %}
 
