--- a/website/templates/category.html
+++ b/website/templates/category.html
@@ -1,7 +1,7 @@
 {% extends "master.html" %}
 
 {% block head %}
-<title>Create Rule Category | Wayfinder</title>
+<title>Create Rule Category | Wayfinder {{ cruleset.name }}</title>
 <script src="{{ url_for('static', filename='js/category.js') }}"></script>
 {% endblock %}
 
