--- a/website/templates/race.html
+++ b/website/templates/race.html
@@ -1,7 +1,7 @@
 {% extends "master.html" %}
 
 {% block head %}
-<title>Create Rule Category | Wayfinder</title>
+<title>{{ race.name }} | Wayfinder {{ cruleset.name }}</title>
 <script src="{{ url_for('static', filename='js/race.js') }}"></script>
 {% endblock %}
 
