added actions and conditions

--- a/website/templates/master.html
+++ b/website/templates/master.html
@@ -33,23 +33,22 @@
 			<a href="/Character/Races">Races</a>
 			<a href="/Character/Backgrounds">Backgrounds</a>
 			<a href="/Character/Feats">Feats</a>
-			<a href="/Character/Stats">Character Stats</a>
-			<a href="/Character/Name">Name</a>
+			<a href="/Character/Ability-Scores">Ability Scores</a>
 			<a href="/Character/Step-by-Step">Step-by-Step Characters</a>
 		</div>
 	</li>
 	<li id="nav-qref" class="dropdown nav-item">
-		<a href="/Quick-Reference">Quick Reference</a>
+		<a href="/Reference">Reference</a>
 		<div class="dropdown-content">
-			<a href="/Quick-Reference/Actions">Actions</a>
-			<a href="/Quick-Reference/Conditions">Conditions</a>
-			<a href="/Quick-Reference/Items">Items & Adventuring Gear</a>
-			<a href="/Quick-Reference/Magic-Items">Magic Items</a>
-			<a href="/Quick-Reference/Languages">Languages</a>
-			<a href="/Quick-Reference/Spells">Spells</a>
-			<a href="/Quick-Reference/Vehicles">Vehicles</a>
-			<a href="/Quick-Reference/Recipes">Recipes</a>
-			<a href="/Quick-Reference/Skills">Skills</a>
+			<a href="/Reference/Actions">Actions</a>
+			<a href="/Reference/Conditions">Conditions</a>
+			<a href="/Reference/Items">Items & Adventuring Gear</a>
+			<a href="/Reference/Magic-Items">Magic Items</a>
+			<a href="/Reference/Languages">Languages</a>
+			<a href="/Reference/Spells">Spells</a>
+			<a href="/Reference/Vehicles">Vehicles</a>
+			<a href="/Reference/Recipes">Recipes</a>
+			<a href="/Reference/Skills">Skills</a>
 		</div>
 	</li>
 	<li id="nav-tools" class="dropdown nav-item">
