--- a/website/templates/actions.html
+++ b/website/templates/actions.html
@@ -2,16 +2,23 @@
 {% extends "master.html" %}
 
 {% block head %}
-<title>Under Construction | Luke Henderson</title>
+<title>Actions | Wayfinder {{ cruleset.name }}</title>
+<script src="{{ url_for('static', filename='js/actions.js') }}"></script>
 {% endblock %}
 
 {% block body %}
 <div class="flex">
-	<div class="flex vertical start">
-		<h1>Page Under Construction</h1>
-		<img src="https://cdn.betterttv.net/emote/609375b139b5010444d0c761/3x" style="max-width: 512px; width: 100%; border-radius: 10px; margin: 50px 150px 50px 150px;">
-		<p>This page isn't finished yet. Come back soon when it's done!</p>
-		<button onclick="window.location.href='/'">Return Home</button>
+	<div class="flex vertical start" x-data="main">
+		<h1>Actions</h1>
+		{% for action in actions %}
+		<div class="usercontent">
+			<h2 x-text="'{{ action.name }}'"></h2>
+			<p><strong><em>Time: </em></strong>{{ action.time }}</p>
+			<hr>
+			<div x-html="convert(`{{ action.text }}`)"></div>
+		</div>
+		{% endfor %}
+		<a href="/Reference/Actions/Create"><button>Create Action</button></a>
 	</div>
 </div>
 
