--- a/website/templates/master.html
+++ b/website/templates/master.html
@@ -43,6 +43,8 @@
 			<a href="/Reference/Actions">Actions</a>
 			<a href="/Reference/Conditions">Conditions</a>
 			<a href="/Reference/Items">Items & Adventuring Gear</a>
+			<a href="/Reference/Items/Tags">Item Types</a>
+			<a href="/Reference/Items/Properties">Weapon Properties</a>
 			<a href="/Reference/Magic-Items">Magic Items</a>
 			<a href="/Reference/Languages">Languages</a>
 			<a href="/Reference/Spells">Spells</a>
@@ -99,7 +101,7 @@
 	<li class="static"><p>Selected Ruleset: </p></li>
 	<li>
 		<select name="current_ruleset" id="current_ruleset"" x-init="init_selected({{ user.current_ruleset }})">
-			<option value="1">5e SRD</option>
+			<option value="1">D&D 5e SRD</option>
 			{% for ruleset in user.rulesets %}
 			<option value="{{ ruleset.id }}">{{ ruleset.name }}</option>
 			{% endfor %}
