--- a/website/templates/create-property.html
+++ b/website/templates/create-property.html
@@ -3,7 +3,7 @@
 
 {% block head %}
 <title>Create Weapon Property | Wayfinder {{ cruleset.name }}</title>
-<script src="{{ url_for('static', filename='js/create-action.js') }}"></script>
+<script src="{{ url_for('static', filename='js/create-property.js') }}"></script>
 {% endblock %}
 
 {% block body %}
