--- a/website/templates/properties.html
+++ b/website/templates/properties.html
@@ -10,7 +10,7 @@
 <div class="flex">
 	<div class="flex vertical start" x-data="main">
 		<h1>Weapon Properties</h1>
-		{% for property in cruleset.item_properties %}
+		{% for property in properties %}
 		<div class="usercontent">
 			<h2>{{ property.name }}</h2>
 			<hr>
