--- a/website/templates/items.html
+++ b/website/templates/items.html
@@ -12,10 +12,10 @@
 		{% for item in cruleset.items %}
 		<template x-init="itemROM.push(
 			{
-				name: '{{ item.name }}',
-				type: '{{ item.tags }}',
-				cost: '{{ item.cost }}',
-				weight: '{{ item.weight }}',
+				name: `{{ item.name }}`,
+				type: `{{ item.tags }}`,
+				cost: `{{ item.cost }}`,
+				weight: `{{ item.weight }}`
 			}
 		)"></template>
 		{% endfor %}
@@ -25,7 +25,7 @@
 			<form class="interior flex horizontal space-between" style="width: 100%; box-sizing: border-box; margin: 0px; background-color: inherit">
 				<div class="interior flex horizontal start" style="width: auto; background-color: inherit">
 					<label for="tags">Tags:</label>
-					<select name="tags" id="tags" x-model="tags" style="width: auto">
+					<select name="tags" id="tags" x-model="tags" style="width: auto" @change="appendTag()">
 						{% for tag in cruleset.item_tags %}
 						<option>{{ tag.name }}</option>
 						{% endfor %}
@@ -33,12 +33,17 @@
 				</div>
 				<div class="interior flex horizontal start" style="width: auto; background-color: inherit">
 					<label for="filterType">Filter Type: </label>
-					<select name="filterType" id="filterType" x-model="filterType" style="width:auto">
-						<option value="true">AND</option>
-						<option value="false">OR</option>
+					<select name="filterType" id="filterType" x-model="filtertype" style="width:auto">
+						<option>AND</option>
+						<option>OR</option>
 					</select>
 				</div>
 			</form>
+			<div class="interior flex horizontal start" style="background-color: inherit; width: 100%">
+				<template x-for="tag, index in taglist">
+					<span class="chip" @click="removeTag(index)"><span x-text="tag"></span><span class="remove">&times</span></span>
+				</template>
+			</div>
 		</div>
 		<table name="filtertable" id="filtertable">
 			<tr class="header">
@@ -50,7 +55,7 @@
 			<template x-for="item, index in filterQuery()">
 				<tr>
 					<td><a @click="window.location.href = '/Reference/Item/' + item.name.split(' ').join('-')" x-text="item.name"></a></td>
-					<td x-text="item.tags"></td>
+					<td x-text="item.type"></td>
 					<td x-text="item.cost"></td>
 					<td x-text="item.weight + 'lbs'"></td>
 				</tr>
