--- a/website/templates/tags.html
+++ b/website/templates/tags.html
@@ -10,7 +10,7 @@
 <div class="flex">
 	<div class="flex vertical start" x-data="main">
 		<h1>Item Types</h1>
-		{% for tag in cruleset.item_tags %}
+		{% for tag in tags %}
 		<div class="usercontent">
 			<h2>{{ tag.name }}</h2>
 			<hr>
