--- a/website/templates/actions.html
+++ b/website/templates/actions.html
@@ -10,7 +10,7 @@
 <div class="flex">
 	<div class="flex vertical start" x-data="main">
 		<h1>Actions</h1>
-		{% for action in actions %}
+		{% for action in cruleset.actions %}
 		<div class="usercontent">
 			<h2 x-text="'{{ action.name }}'"></h2>
 			<p><strong><em>Time: </em></strong>{{ action.time }}</p>
